src/components/Navbar/Navbar.css
.nav-bar {
  width: 100vw;
  padding: 1rem 2rem;
  margin-bottom: 1.8rem;
  background-color: var(--nav-bg);
  border-bottom: 2px solid var(--nav-clr);
  display: flex;
  align-items: center;
  align-self: flex-start;
  gap: 0.5rem;
}

@media (max-width: 550px) {
  .nav-bar {
    padding: 1rem;
  }
}

:is(.nav-title, .nav-svg) {
  color: var(--nav-clr);
}
.nav-svg {
  width: 1.5em;
}
.nav-title {
  font-size: 1.5rem;
}

